--- a/index.html
+++ b/index.html
@@ -198,6 +198,17 @@
             location.reload();
         }, 60000);
     </script>
+    <script>
+        // Disable right-click
+        document.addEventListener('contextmenu', event => event.preventDefault());
+
+        // Disable certain keyboard shortcuts
+        document.addEventListener('keydown', (event) => {
+            if (event.key === "F12" || (event.ctrlKey && event.shiftKey && event.key === "I")) {
+                event.preventDefault();
+            }
+        });
+    </script>
 
 </body>
 </html>
