--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
         setTimeout(function() {
             location.reload();
         }, 60000);
+        </script>
+    <script>
+        // Disable right-click
         document.addEventListener('contextmenu', event => event.preventDefault());
 
         // Disable certain keyboard shortcuts
