--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <script>
         function generateLink() {
-            const storeID = "000000000-01";
+            const storeID = "91KDIPL711-01";
             const orderID = document.getElementById('order-id').value;
             const date = document.getElementById('date').value;
             const time = document.getElementById('time').value + ".000";
