--- a/index.html
+++ b/index.html
@@ -3,206 +3,132 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subscription & Link Encoder</title>
+    <title>Link Generator</title>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f7f9fc;
-            margin: 0;
-            padding: 20px;
+            font-family: Arial, sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            min-height: 100vh;
+            margin: 20px;
         }
-
-        #encoder-container, .container {
+        .container {
+            max-width: 400px;
             width: 100%;
-            max-width: 800px;
-            background: #ffffff;
-            padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-            transition: box-shadow 0.3s ease;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-
-        #encoder-container:hover, .container:hover {
-            box-shadow: 0 16px 32px rgba(0, 0, 0, 0.2);
-        }
-
-        h2, .container h1 {
-            color: #333;
-            margin: 0;
-            font-size: 28px;
-            font-weight: 700;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
         label {
-            font-weight: 600;
-            color: #555;
-            margin-bottom: 8px;
             display: block;
+            margin-top: 10px;
         }
-
-        input[type="text"], input[type="date"], input[type="time"] {
-            width: calc(100% - 22px);
-            padding: 12px;
-            margin-bottom: 15px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            font-size: 16px;
-            transition: border-color 0.3s ease, box-shadow 0.3s ease;
-            background-color: #f9f9f9;
-        }
-
-        input[type="text"]:focus, input[type="date"]:focus, input[type="time"]:focus {
-            border-color: #007bff;
-            box-shadow: 0 0 8px rgba(0, 123, 255, 0.3);
-            outline: none;
-        }
-
-        button {
+        input, select {
             width: 100%;
-            padding: 12px;
-            background-color: #007bff;
-            border: none;
-            border-radius: 8px;
-            color: #ffffff;
-            font-size: 18px;
-            cursor: pointer;
-            margin-top: 10px;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 8px;
+            margin-top: 5px;
+            margin-bottom: 10px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
         }
-
-        button:hover {
-            background-color: #0056b3;
-            transform: scale(1.02);
+        .output {
+            margin-top: 15px;
+            font-weight: bold;
         }
-
-        #generated-link {
-            margin-top: 20px;
-            padding: 15px;
-            background-color: #e9ecef;
-            border-radius: 8px;
-            word-break: break-word;
-            font-family: monospace;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border: 1px solid #ddd;
-        }
-
-        #copy-button {
-            margin-top: 10px;
-            padding: 12px;
-            background-color: #28a745;
-            border: none;
-            border-radius: 8px;
-            color: white;
-            font-size: 18px;
-            cursor: pointer;
-            display: none;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        #copy-button:hover {
-            background-color: #218838;
-            transform: scale(1.02);
+        .output a {
+            color: blue;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
+    <div class="container">
+        <h2>Generate KFC Link</h2>
+        
+        <label for="orderId">Order ID (OI/TI):</label>
+        <input type="text" id="orderId" placeholder="e.g., 5277">
 
-    <!-- Link Encoder Section -->
-    <div id="encoder-container">
-        <h2>Link Encoder - Yelahanka</h2>
-
-        <label for="order-id">Order ID</label>
-        <input type="text" id="order-id" placeholder="Enter Order ID">
-
-        <label for="date">Date</label>
+        <label for="date">Date (D):</label>
         <input type="date" id="date">
 
-        <label for="time">Time</label>
+        <label for="time">Time (TM):</label>
         <input type="time" id="time">
 
-        <label for="order-type">Order Type</label>
-        <input type="text" id="order-type" placeholder="Enter Order Type (e.g., 1 for dine-in)">
+        <label for="phone">Phone (PH):</label>
+        <input type="text" id="phone" placeholder="e.g., 918073606795">
 
-        <label for="survey-model">Survey Model</label>
-        <input type="text" id="survey-model" placeholder="Enter Survey Model (e.g., 4.0)">
+        <label for="orderType">Order Type (OT):</label>
+        <select id="orderType" onchange="updateSurveyMode()">
+            <option value="1">Dine In</option>
+            <option value="2">Take Away</option>
+            <option value="3">Delivery</option>
+        </select>
 
-        <label for="phone-number">Phone Number</label>
-        <input type="text" id="phone-number" placeholder="Enter Phone Number">
+        <label for="surveyMode">Survey Mode (SM):</label>
+        <select id="surveyMode">
+            <option value="4.0">Kiosk</option>
+            <option value="3.0">App</option>
+        </select>
 
         <button onclick="generateLink()">Generate Link</button>
 
-        <div id="generated-link"></div>
-        <button id="copy-button" onclick="copyLink()">Copy to Clipboard</button>
+        <div class="output" id="output"></div>
     </div>
 
-
     <script>
-        function generateLink() {
-           // const storeID = "91KDIPL711-01";
-            const orderID = document.getElementById('order-id').value;
-            const date = document.getElementById('date').value;
-            const time = document.getElementById('time').value + ".000";
-            const orderType = document.getElementById('order-type').value;
-            const surveyModel = document.getElementById('survey-model').value;
-            const phoneNumber = document.getElementById('phone-number').value;
+        const constantStoreId = "91KDIPL946-1"; // Store ID is constant
 
-            if (orderID && date && time && orderType && surveyModel && phoneNumber) {
-                const data = {
-                    "S": storeID,
-                    "OI": orderID,
-                    "D": date,
-                    "TM": time,
-                    "TI": orderID,
-                    "OT": orderType,
-                    "SM": surveyModel,
-                    "PH": phoneNumber
-                };
+        function updateSurveyMode() {
+            const orderType = document.getElementById("orderType").value;
+            const surveyMode = document.getElementById("surveyMode");
+            surveyMode.innerHTML = "";  // Clear options
 
-                const encodedData = btoa(JSON.stringify(data));
-                const link = `https://customer.kfc-listens.com/jfe/form/SV_8bHC0noyvM3jPWC?Q_EED=${encodedData}`;
-
-                document.getElementById('generated-link').textContent = link;
-                document.getElementById('copy-button').style.display = 'block';
+            if (orderType === "3") {
+                // If 'Delivery' is selected, disable 'Kiosk' (4.0)
+                surveyMode.innerHTML = <option value="3.0">App</option>;
             } else {
-                alert("Please fill out all fields.");
+                // If not 'Delivery', both options are available
+                surveyMode.innerHTML = <option value="4.0">Kiosk</option><option value="3.0">App</option>;
             }
         }
 
-        function copyLink() {
-            const link = document.getElementById('generated-link').textContent;
-            navigator.clipboard.writeText(link).then(() => {
-                alert("Link copied to clipboard!");
-            }).catch(err => {
-                console.error('Failed to copy: ', err);
-            });
-        }
+        function generateLink() {
+            const orderId = document.getElementById("orderId").value;
+            const date = document.getElementById("date").value;
+            const time = document.getElementById("time").value;
+            const phone = document.getElementById("phone").value;
+            const orderType = document.getElementById("orderType").value;
+            const surveyMode = document.getElementById("surveyMode").value;
 
-        setTimeout(function() {
-            location.reload();
-        }, 60000);
-        </script>
-    <script>
-        // Disable right-click
-        document.addEventListener('contextmenu', event => event.preventDefault());
-
-        // Disable certain keyboard shortcuts
-        document.addEventListener('keydown', (event) => {
-            if (event.key === "F12" || (event.ctrlKey && event.shiftKey && event.key === "I")) {
-                event.preventDefault();
+            if (!orderId || !date || !time || !phone) {
+                alert("Please fill in all fields.");
+                return;
             }
-        });
+
+            // Format time and date-time in the required formats
+            const formattedTime = time + ":00.000";
+            const formattedDateTime = date + "T" + formattedTime + "Z";
+
+            // Create JSON object and Base64 encode it
+            const data = {
+                "S": constantStoreId,
+                "OI": orderId,
+                "D": date,
+                "TM": formattedTime,
+                "DTM": formattedDateTime,
+                "TI": orderId, // Using Order ID for both OI and TI
+                "OT": orderType,
+                "SM": surveyMode,
+                "PH": phone
+            };
+            const jsonString = JSON.stringify(data);
+            const encodedData = btoa(jsonString);
+
+            // Create the final URL
+            const link = https://customer.kfc-listens.com/jfe/form/SV_8bHC0noyvM3jPWC?Q_EED=${encodedData};
+            document.getElementById("output").innerHTML = Generated Link: <a href="${link}" target="_blank">${link}</a>;
+        }
     </script>
-    
-
 </body>
 </html>
